--- a/Dockerfile.Dev
+++ b/Dockerfile.Dev
@@ -1,7 +1,14 @@
 FROM ubuntu:20.04
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends ocserv gnutls-bin build-essential python3 \
-    python3-pip python3-dev python3-venv gettext-base iptables cron openssl nano less
+RUN apt-get update
+RUN apt-get install -y --no-install-recommends ocserv gnutls-bin build-essential python3 \
+    python3-pip python3-dev python3-venv gettext-base iptables cron openssl nano less golang
+
+# log service
+
+# RUn mkdir /monitor
+# COPY ./monitor /monitor
+# RUN cd /monitor && go build -o log_monitor main.go
+# RUN chmod +x /monitor/log_monitor
 
 # backend installation
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -16,13 +23,15 @@ COPY back-end/requirements.txt .
 RUN mkdir -p db
 RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install -r requirements.txt
- 
+
 # ocserv installation
-COPY configs/services_pack_dev.sh /services.sh 
-COPY configs/entrypoint_ocserv.sh /entrypoint.sh 
+
+COPY configs/services_pack_dev.sh /services.sh
+COPY configs/entrypoint_ocserv.sh /entrypoint.sh
 RUN chmod +x /services.sh /entrypoint.sh
 RUN echo net.ipv4.ip_forward=1 | tee -a /etc/sysctl.conf && sysctl -p
 EXPOSE 443/tcp 443/udp
+WORKDIR /etc/ocserv
 VOLUME ["/etc/ocserv", "/app"]
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["/services.sh"]
