--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,5 @@
 # use for develop frontend
-version: '3.9'
+version: "3.9"
 
 services:
   ocserv_and_backend:
@@ -9,7 +9,7 @@ services:
     privileged: true
     build:
       context: .
-      dockerfile: Dockerfile_dev
+      dockerfile: Dockerfile.Dev
     ports:
       - 20443:443/tcp
       - 20443:443/udp
@@ -22,8 +22,27 @@ services:
       - DEBUG=True
       - CORS_ALLOWED=http://127.0.0.1:9000
       - SECRET_KEY=SECRET_KEY
+      - SOCKET_PASSWD_FILE=./back-end/socket_passwd.txt
     volumes:
       - "./back-end:/app"
-      - "./volumes:/etc/ocserv"
+      - "./volumes/ocserv:/etc/ocserv"
+      - "./volumes/log:/var/log"
 
+  monitor:
+    image: golang:latest
+    container_name: monitor
+    build:
+      context: .
+      dockerfile: Dockerfile.Monitor
+    ports:
+      - 127.0.0.1:8080:8080
+    environment:
+      - SOCKET_PASSWD_FILE=/tmp/socket_passwd.txt
+      - LOG_FILE=/var/log/ocserv.log
+    volumes:
+      - "./back-end/socket_passwd.txt:/tmp/socket_passwd.txt"
+      - "./volumes/log/ocserv.log:/var/log/ocserv.log"
+#
+#
+#
 # DOCKER_SCAN_SUGGEST=false docker compose -f docker-compose.dev.yml up -d --build
