--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 volumes:
   shared-ssl:
+  shared-mointor:
 
 services:
   ocserv_and_backend:
@@ -15,20 +16,14 @@ services:
     volumes:
       - ./volumes/ocserv:/etc/ocserv
       - ./volumes/db:/app/db
-      - ./volumes/log:/var/log
       - shared-ssl:/etc/ocserv/certs
+      - shared-mointor:/var/log
     ports:
       - ${PORT:-20443}:443/tcp
       - ${PORT:-20443}:443/udp
       - 127.0.0.1:8000:8000
-    environment:
-      - CN=${CN:-End-way-Cisco-VPN}
-      - ORG=${ORG:-End-way}
-      - EXPIRE=${EXPIRE:-3650}
-      - OC_NET=${OC_NET:-172.16.24.0/24}
-      - DEBUG=${DEBUG:-False}
-      - CORS_ALLOWED=http://${HOST},https://${HOST}
-      - HOST=${HOST}
+    env_file:
+      - prod.env
 
   nginx:
     restart: always
@@ -42,7 +37,20 @@ services:
       - "443:443"
     depends_on:
       - ocserv_and_backend
+      - monitor
     environment:
       - DOMAIN=${DOMAIN}
     volumes:
       - shared-ssl:/etc/nginx/certs
+
+  monitor:
+    restart: on-failure
+    image: monitor:ocserv
+    container_name: monitor
+    build:
+      context: .
+      dockerfile: Dockerfile.Monitor
+    volumes:
+      - shared-mointor:/shared_mointor
+    depends_on:
+      - ocserv_and_backend
