--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,15 +8,16 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "typed.js": "^2.0.16",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2",
-    "typed.js": "^2.0.16"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/node": "^20.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
