--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apexcharts": "^3.41.0",
     "core-js": "^3.8.3",
     "typed.js": "^2.0.16",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
