fix script installing bugs

--- a/configs/user_stats.service
+++ b/configs/user_stats.service
@@ -8,8 +8,7 @@ Type=simple
 User=root
 Group=www-data
 PIDFile=/run/user_stats.pid
-WorkingDirectory=/var/www/site/backend
-ExecStart=venv/bin/python user_stats.py
+ExecStart=/var/www/site/back-end/venv/bin/python3 /var/www/site/back-end/user_stats.py
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
 Restart=always
