fix some bugs in installation

--- a/Dockerfile.Monitor
+++ b/Dockerfile.Monitor
@@ -4,6 +4,6 @@ WORKDIR /usr/src/app
 COPY ./monitor/go.mod ./monitor/go.sum .
 RUN go mod download && go mod verify
 COPY ./monitor/ .
-RUN go build -v -o /usr/local/bin/app ./...
+RUN go build -v -o /usr/local/bin/app
 EXPOSE 8080
 CMD ["app"]
