--- a/Dockerfile.Dev
+++ b/Dockerfile.Dev
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends ocserv gnutls-bin build-essential python3 \
-    python3-pip python3-dev python3-venv gettext-base iptables cron openssl nano less
+    python3-pip python3-dev python3-venv gettext-base iptables cron openssl nano less sudo
 
 # backend installation
 ENV PYTHONDONTWRITEBYTECODE=1
