--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 volumes:
   shared-ssl:
-  shared-mointor:
+  # shared-mointor:
 
 services:
   ocserv_and_backend:
@@ -17,7 +17,7 @@ services:
       - ./volumes/ocserv:/etc/ocserv
       - ./volumes/db:/app/db
       - shared-ssl:/etc/ocserv/certs
-      - shared-mointor:/var/log
+      # - shared-mointor:/var/log
     ports:
       - ${PORT:-20443}:443/tcp
       - ${PORT:-20443}:443/udp
@@ -43,14 +43,14 @@ services:
     volumes:
       - shared-ssl:/etc/nginx/certs
 
-  monitor:
-    restart: on-failure
-    image: monitor:ocserv
-    container_name: monitor
-    build:
-      context: .
-      dockerfile: Dockerfile.Monitor
-    volumes:
-      - shared-mointor:/shared_mointor
-    depends_on:
-      - ocserv_and_backend
+  # monitor:
+  #   restart: on-failure
+  #   image: monitor:ocserv
+  #   container_name: monitor
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.Monitor
+  #   volumes:
+  #     - shared-mointor:/shared_mointor
+  #   depends_on:
+  #     - ocserv_and_backend
