--- a/configs/uwsgi.ini
+++ b/configs/uwsgi.ini
@@ -9,8 +9,8 @@ max-requests=5000
 http-socket = 127.0.0.1:8000
 http-keepalive=0
 chmod-socket = 777
-uid = root
-gid = root
+uid = www-data
+gid = www-data
 enable-threads = true
 exit-on-reload = true
 die-on-term = true
