--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - ${PORT:-20443}:443/tcp
       - ${PORT:-20443}:443/udp
       - 127.0.0.1:8000:8000
-    env_file:
-      - prod.env
+    # env_file:
+    #   - prod.env
 
   nginx:
     restart: always
