--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
     ports:
       - ${PORT:-20443}:443/tcp
       - ${PORT:-20443}:443/udp
-      - 127.0.0.1:8000:8000
-    # env_file:
-    #   - prod.env
+      # - 127.0.0.1:8000:8000
+    env_file:
+      - ./prod.env
 
   nginx:
     restart: always
@@ -37,12 +37,14 @@ services:
       - "443:443"
     depends_on:
       - ocserv_and_backend
-      - monitor
+      # - monitor
     environment:
       - DOMAIN=${DOMAIN}
     volumes:
       - shared-ssl:/etc/nginx/certs
-
+    env_file:
+      - ./prod.env
+  #
   # monitor:
   #   restart: on-failure
   #   image: monitor:ocserv
