--- a/Dockerfile.Dev
+++ b/Dockerfile.Dev
@@ -1,7 +1,11 @@
 FROM ubuntu:20.04
+
 RUN apt-get update
-RUN apt-get install -y --no-install-recommends ocserv gnutls-bin build-essential python3 \
-    python3-pip python3-dev python3-venv gettext-base iptables cron openssl nano less sudo
+RUN apt-get install -y --no-install-recommends ocserv gnutls-bin build-essential 
+RUN apt-get install -y --no-install-recommends gettext-base openssl nano less sudo
+RUN apt-get install -y --no-install-recommends python3 python3-dev 
+RUN apt-get update
+RUN apt install -y python3-pip
 
 # backend installation
 ENV PYTHONDONTWRITEBYTECODE=1
