fix www-data : command not allowed. issue: #43

--- a/configs/uwsgi.ini
+++ b/configs/uwsgi.ini
@@ -9,7 +9,7 @@ max-requests=5000
 http-socket = 127.0.0.1:8000
 http-keepalive=0
 chmod-socket = 777
-uid = www-data
+uid = root
 gid = www-data
 enable-threads = true
 exit-on-reload = true
