--- a/configs/user_stats.service
+++ b/configs/user_stats.service
@@ -8,7 +8,8 @@ Type=simple
 User=root
 Group=www-data
 PIDFile=/run/user_stats.pid
-ExecStart=/var/www/site/back-end/venv/bin/python3 /var/www/site/back-end/user_stats.py
+#ExecStart=/var/www/site/back-end/venv/bin/python3 /var/www/site/back-end/user_stats.py
+ExecStart=/var/www/site/back-end/venv/bin/python /var/www/site/back-end/manage.py user_stats
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
 Restart=always
