--- a/Dockerfile.Dev
+++ b/Dockerfile.Dev
@@ -1,11 +1,10 @@
 FROM ubuntu:20.04
 
-RUN apt-get update
-RUN apt-get install -y --no-install-recommends ocserv gnutls-bin build-essential 
-RUN apt-get install -y --no-install-recommends gettext-base openssl nano less sudo iptables cron 
-RUN apt-get install -y --no-install-recommends python3 python3-dev 
-RUN apt-get update
-RUN apt install -y python3-pip
+RUN apt update
+RUN apt install -y --no-install-recommends ocserv gnutls-bin build-essential 
+RUN apt install -y --no-install-recommends gettext-base openssl nano sudo iptables cron 
+RUN apt install -y --no-install-recommends python3 python3-dev python3-pip
+
 
 # backend installation
 ENV PYTHONDONTWRITEBYTECODE=1
