--- a/Dockerfile.Dev
+++ b/Dockerfile.Dev
@@ -1,33 +1,29 @@
 FROM ubuntu:20.04
 
-RUN apt update
-RUN apt install -y --no-install-recommends ocserv gnutls-bin build-essential 
-RUN apt install -y --no-install-recommends gettext-base openssl nano sudo iptables cron 
-RUN apt install -y --no-install-recommends python3 python3-dev python3-pip
-
-
-# backend installation
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-ENV PIP_DISABLE_PIP_VERSION_CHECK=1
 ARG HOST
 ARG DEBUG
 ARG CORS_ALLOWED
-RUN mkdir -p /app
-WORKDIR /app
-COPY back-end/requirements.txt .
-RUN mkdir -p db
-# RUN python3 -m pip install --upgrade pip
-RUN python3 -m pip install -r requirements.txt
 
-# ocserv installation
+RUN apt update
+RUN apt install -y --no-install-recommends ocserv gnutls-bin build-essential gettext-base openssl nano sudo iptables cron python3 python3-dev python3-pip
 
 COPY configs/services_pack_dev.sh /services.sh
 COPY configs/entrypoint_ocserv.sh /entrypoint.sh
 RUN chmod +x /services.sh /entrypoint.sh
 RUN echo net.ipv4.ip_forward=1 | tee -a /etc/sysctl.conf && sysctl -p
-EXPOSE 443/tcp 443/udp
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV PIP_DISABLE_PIP_VERSION_CHECK=1
+
+RUN mkdir -p /app
+WORKDIR /app
+COPY back-end/requirements.txt .
+RUN mkdir -p db
+RUN python3 -m pip install -r requirements.txt
+
 WORKDIR /etc/ocserv
+EXPOSE 443/tcp 443/udp
 VOLUME ["/etc/ocserv", "/app"]
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["/services.sh"]
