--- a/Dockerfile.Dev
+++ b/Dockerfile.Dev
@@ -5,7 +5,9 @@ ARG DEBUG
 ARG CORS_ALLOWED
 
 RUN apt update
-RUN apt install -y --no-install-recommends ocserv gnutls-bin build-essential gettext-base openssl nano sudo iptables cron python3 python3-dev python3-pip
+RUN apt install -y --no-install-recommends ocserv gnutls-bin build-essential
+RUN apt install -y --no-install-recommends gettext-base iptables cron openssl sudo
+RUN apt install -y --no-install-recommends python3 python3-dev python3-pip
 
 COPY configs/services_pack_dev.sh /services.sh
 COPY configs/entrypoint_ocserv.sh /entrypoint.sh
