--- a/Dockerfile.Front
+++ b/Dockerfile.Front
@@ -1,23 +1,21 @@
-# vue js section
+# Vue.js build stage
 FROM node:latest AS vue
 ARG BACKEND_API
-RUN apt update
-RUN apt install -y --no-install-recommends git
 WORKDIR /app
 COPY ./front-end .
-RUN npm install
-RUN NODE_ENV=production VUE_APP_DOCKERIZED=true npm run build
+RUN apt update && apt install -y --no-install-recommends git && \
+    npm install && \
+    NODE_ENV=production VUE_APP_DOCKERIZED=true npm run build && \
+    apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# nginx section
+# Nginx stage
 FROM nginx:alpine
-RUN apk update && apk add bash && apk add gettext
+RUN apk add --no-cache bash gettext && \
+    rm -rf /etc/nginx/conf.d/default.conf /usr/share/nginx/html && \
+    mkdir -p /var/www/site /etc/nginx/certs
 COPY configs/nginx.conf.sh /nginx.conf.sh
+COPY --from=vue /app/dist /var/www/site
 RUN chmod +x /nginx.conf.sh
-WORKDIR /var/www/site
-RUN mkdir -p /etc/nginx/certs
-RUN rm -rf /etc/nginx/sites-enabled/default
-RUN rm -rf /usr/share/nginx/html
-RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY --from=vue /app/dist .
+
 ENTRYPOINT ["/nginx.conf.sh"]
 CMD ["nginx", "-g", "daemon off;"]
