--- a/Dockerfile.Front
+++ b/Dockerfile.Front
@@ -1,9 +1,8 @@
 # Vue.js build stage
-FROM node:latest AS vue
+FROM node:20 AS vue
 ARG BACKEND_API
 WORKDIR /app
 COPY ./front-end .
-RUN apt update && apt install -y --no-install-recommends git && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 RUN npm install 
 RUN NODE_ENV=production VUE_APP_DOCKERIZED=true npm run build
 
