--- a/ui/package.json
+++ b/ui/package.json
@@ -12,9 +12,11 @@
     "@mdi/font": "^7.4.47",
     "@openapitools/openapi-generator-cli": "^2.19.1",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
     "sass": "^1.89.2",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-i18n": "^9.14.4",
     "vue-router": "^4.5.1",
     "vuetify": "^3.8.10"
