--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -1,9 +1,8 @@
 FROM golang:1.24.2 AS builder
-LABEL authors="masoud"
 
-ENV GIN_MODE=release
 ENV CGO_ENABLED=1
 ENV GOOS=linux
+ENV GOARCH=amd64
 
 WORKDIR /app
 
@@ -15,12 +14,8 @@ COPY  . .
 
 RUN go build -v -o ocserv_service main.go
 
-# Stage 2: Final runtime image (Debian-slim)
-FROM debian:bookworm-slim
+FROM debian:trixie-slim
 
-LABEL authors="masoud"
-
-# Install SQLite runtime libraries and certificates
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     ca-certificates \
@@ -30,11 +25,8 @@ RUN apt-get update && \
 
 WORKDIR /app
 
-# Copy the built binary from the builder stage
 COPY --from=builder /app/ocserv_service .
 
-# Expose the port your app listens on (change if needed)
 EXPOSE 8082
 
-# Run the binary
 CMD ["./ocserv_service"]
