--- a/web/configs/nginx.conf
+++ b/web/configs/nginx.conf
@@ -6,14 +6,11 @@ upstream socket_backend {
     server stream_log:8080;
 }
 
-# Redirect HTTP (port 80) to HTTPS
-# server {
-#     listen 80;
-#     server_name _;
-#     return 301 https://$host$request_uri;
-#     # For production, use:
-#     # return 301 https://example.com$request_uri;
-# }
+server {
+     listen 80;
+     server_name _;
+     return 301 https://$host$request_uri;
+}
 
 server {
     listen 443 ssl http2;
@@ -28,7 +25,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api/ {
+    location ~ ^/(api) {
         proxy_pass http://api_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -37,7 +34,7 @@ server {
     }
 
     location /ws/ {
-        proxy_pass http://socket_backend;
+        proxy_pass http://socket_backend/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
