update env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,11 @@
 HOST=127.0.0.1
 SECRET_KEY=b6f1f1e402cd30c
 JWT_SECRET=069b660c7bec62e3
-ALLOW_ORIGINS=http://127.0.0.1:3000,https://127.0.0.1:3443
-WEBHOOK_API=http://ocserv:8080
-NGINX_PORT=3000
-NGINX_S_PORT=3443
+ALLOW_ORIGINS="https://${HOST}:3443"
 SSL_CN=End-way-Cisco-VPN
 SSL_ORG=End-way
 SSL_OC_NET=172.16.24.0/24
 SSL_EXPIRE=3650
 OCSERV_PORT=443
 OCSERV_DNS=8.8.8.8
-API_URL=https://127.0.0.1:3443/api
-LOG_SOCKET_URL=https://127.0.0.1:3443/ws/logs
-LANGUAGES="en:English,zh:中文,ru:Русский,fa:فارسی,ar:العربية"
+LANGUAGES=en:English,zh:中文,ru:Русский,fa:فارسی,ar:العربية
