--- a/scripts/nginx_docker.conf
+++ b/scripts/nginx_docker.conf
@@ -1,19 +1,14 @@
 upstream api_backend {
-    server api:8080;
+    server 127.0.0.1:8080;
 }
 
 upstream socket_backend {
-    server stream_log:8080;
+    server 127.0.0.1:8081;
 }
 
-server {
-     listen 80;
-     server_name _;
-     return 301 https://$host$request_uri;
-}
 
 server {
-    listen 443 ssl http2;
+    listen 3000 ssl http2;
     server_name _;
 
     ssl_certificate     /etc/nginx/certs/cert.pem;
