--- a/scripts/nginx_docker.conf
+++ b/scripts/nginx_docker.conf
@@ -1,9 +1,9 @@
 upstream api_backend {
-    server 127.0.0.1:8080;
+    server ocserv:8080;
 }
 
-upstream socket_backend {
-    server 127.0.0.1:8081;
+upstream stream_log_backend {
+    server stream_log:8080;
 }
 
 
@@ -29,7 +29,7 @@ server {
     }
 
     location /ws/ {
-        proxy_pass http://socket_backend/;
+        proxy_pass http://stream_log_backend/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
