update .env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     privileged: true
     env_file:
       - ./.env
+    environment:
+      ALLOW_ORIGINS: "http://${HOST}:3000,https://${HOST}:3000"
     cap_add:
       - NET_ADMIN
     devices:
