add releser and install.sh

--- a/.env.sample
+++ b/.env.sample
@@ -27,7 +27,7 @@ SSL_CN=End-way-Cisco-VPN
 SSL_ORG=End-way
 
 # Ocserv VPN subnet (CIDR format)
-SSL_OC_NET=172.16.24.0/24
+OC_NET=172.16.24.0/24
 
 # SSL certificate validity in days
 SSL_EXPIRE=3650
