new .env.sample file

--- a/.env.sample
+++ b/.env.sample
@@ -15,10 +15,10 @@
 HOST=127.0.0.1
 
 # Secret key for internal API/auth usage
-SECRET_KEY=SECRET_KEY-1234
+SECRET_KEY=54c4845df352b0
 
 # JWT secret used by the API for authentication
-JWT_SECRET=JWT_SECRET-1234
+JWT_SECRET=1a5eca6b247881
 
 # SSL certificate Common Name
 SSL_CN=End-way-Cisco-VPN
@@ -40,3 +40,19 @@ OCSERV_DNS=8.8.8.8
 
 # Supported languages (format: code:Name, comma-separated)
 LANGUAGES=en:English,zh:中文,ru:Русский,fa:فارسی,ar:العربية
+
+# -----------------------
+# PostgreSQL configuration
+# -----------------------
+
+# PostgreSQL database name
+DB_NAME=ocserv
+
+# PostgreSQL username
+DB_USERNAME=ocserv
+
+# PostgreSQL password
+DB_PASSWORD=ocserv-passwd
+
+# PostgreSQL host (service name or IP)
+DB_HOST=127.0.0.1
